<resources>
    <string name="app_name">Alex Shop</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_settings">Settings</string>
    <string name="sort_name_desc">By Name Desc</string>
    <string name="sort_name_asc">By Name Asc</string>
    <string name="sort_cost_desc">By Cost Desc</string>
    <string name="sort_cost_asc">By Cost Asc</string>
    <string name="sort_date_desc">By Date Desc</string>
    <string name="sort_date_asc">By Date Asc</string>
    <string name="trans_history_value">Transaction History</string>
</resources>