<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.scrollingactivity.ui.shop.MainActivity">
    <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />

    <item
            android:id="@+id/sort_name_desc"
            android:orderInCategory="1"
            android:title="@string/sort_name_desc"
            app:showAsAction="never" />

    <item
            android:id="@+id/sort_name_asc"
            android:orderInCategory="1"
            android:title="@string/sort_name_asc"
            app:showAsAction="never" />

    <item
            android:id="@+id/sort_cost_desc"
            android:orderInCategory="1"
            android:title="@string/sort_cost_desc"
            app:showAsAction="never" />

    <item
            android:id="@+id/sort_cost_asc"
            android:orderInCategory="1"
            android:title="@string/sort_cost_asc"
            app:showAsAction="never" />

    <item
            android:id="@+id/sort_date_desc"
            android:orderInCategory="1"
            android:title="@string/sort_date_desc"
            app:showAsAction="never" />

    <item
            android:id="@+id/sort_date_asc"
            android:orderInCategory="1"
            android:title="@string/sort_date_asc"
            app:showAsAction="never" />

    <item
            android:id="@+id/search"
            android:orderInCategory="1"
            android:title="Search"
            app:actionViewClass="android.widget.SearchView"
            app:showAsAction="collapseActionView|ifRoom" />
</menu>